# lambda

./: lambda.cabal
exe/: Main.hs
lib/Lambda/: Atom.hs  ClosedTerm.hs  LNR.hs  Lambda.hs  Prelude.hs  Util.hs  Utils.hs
lib/Lambda/Term/: Bruijn.hs
lib/Lambda/Term/Bruijn/: Leveled.hs
